<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context=".MainActivity" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryColor"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/toolbar"
            app:titleTextColor="@color/white" />


    </com.google.android.material.appbar.AppBarLayout>
    <!-- ListView -->
    <ListView
        android:id="@+id/listViewBookmarks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:padding="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFilter" />

    <LinearLayout
        android:id="@+id/llNoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <ImageView
            android:id="@+id/image_nodata"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/no_data"
            app:srcCompat="@drawable/ic_no_data" />

        <TextView
            android:id="@+id/tv_oops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:fontFamily="@font/andada_pro"
            android:gravity="center"
            android:text="@string/no_data_opps"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_nobookmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andada_pro"
            android:gravity="center"
            android:text="@string/no_data_added" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerFilter"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

</androidx.constraintlayout.widget.ConstraintLayout>